--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2017",
     "module": "es6",
-    "rootDir": "./src",
+    "rootDir": "src",
     "outDir": "./dist",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
